--- a/03-counter-app-vite/src/dev.css
+++ b/03-counter-app-vite/src/dev.css
@@ -41,12 +41,33 @@ section {
   height: 40px;
   background-color: #0f0;
   border-radius: 50%;
-  /* transform-origin: 100px 50%; */
+  transform-origin: 100px 50%;
   animation: animatedot 4s linear infinite;
+  /* color: rgb(238, 19, 19);  */
   animation-delay: calc(0.025s * var(--i));
-  box-shadow: 0 0 30px #0f08;
+  box-shadow: 0 0 30px rgba(248, 0, 0, 0.533);
+
+  text-shadow:
+   0 0 10px rgb(201, 240, 201),
+   0 0 15px rgb(1, 8, 1),
+   0 0 25px rgb(39, 39, 39),
+   
+   ;
+   display: flex;
 }
 
+b{
+
+font-size: 1.5rem;
+font-family: console;
+color: #0f0;
+animation: fixText 4s linear infinite;
+animation-delay: calc(0.025s * var(--i));
+
+
+
+
+}
 @keyframes animatedot {
 
 
@@ -66,6 +87,35 @@ section {
   
 50.000000000001% {
   transform-origin: -60px 50%;
+  transform: translate(-50%,-50%) rotate(360deg);
+
+}
+
+
+  100% {
+    transform-origin: -60px 50%;
+    transform: translate(-50%,-50%) rotate(0deg);
+    filter: hue-rotate(360deg);
+
+  }
+}
+
+@keyframes fixText {
+
+
+  0% {
+    transform: translate(-50%,-50%) rotate(0deg);
+    filter: hue-rotate(0deg);
+
+  }
+
+50% {
+    transform: translate(-50%,-50%) rotate(360deg);
+
+  }
+
+  
+50.000000000001% {
   transform: translate(-50%,-50%) rotate(360deg);
 
 }
