--- a/sReact/proyect-1/src/styles.css
+++ b/sReact/proyect-1/src/styles.css
@@ -8,6 +8,7 @@
 body, html {
     display: flex;
     flex-direction: column;
+    flex:1 0 0;
     align-items: center;
     justify-content: center;
     height: 100vh;
